--- a/YoutubePlaylistDownloader/About.xaml
+++ b/YoutubePlaylistDownloader/About.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="YoutubePlaylistDownloader.About"
+﻿<UserControl x:Class="LaMuccaRossaVideoDownloader.About"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -18,16 +18,18 @@
                         <Paragraph TextAlignment="Left" FlowDirection="LeftToRight">
                             <Run FontSize="14" Text="{DynamicResource CreditsAndContributors}" />
                         </Paragraph>
+                        <Paragraph TextAlignment="Center">
+                        <Image x:Name="AboutLogoLMR" Height="150" Width="270" Source="/Logo La Mucca Rossa 1096x591.png"/>
+                        </Paragraph>
                     </FlowDocument>
                 </RichTextBox>
             </Controls:MetroTabItem>
 
         </Controls:MetroTabControl>
 
-        <Controls:Tile Style="{DynamicResource LargeTileStyle}" x:Name="UpdateButton" Title="{DynamicResource CheckForUpdates}" Click="UpdateButton_Click">
+        <Controls:Tile Style="{DynamicResource LargeTileStyle}" x:Name="UpdateButton" Title="{DynamicResource CheckForUpdates}" Click="UpdateButton_Click" Height="90" Width="195">
             <iconPacks:PackIconModern Width="40" Height="40" Kind="Inbox" />
         </Controls:Tile>
-
     </StackPanel>
 
 </UserControl>
