--- a/YoutubePlaylistDownloader/App.xaml
+++ b/YoutubePlaylistDownloader/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="YoutubePlaylistDownloader.App"
+﻿<Application x:Class="LaMuccaRossaVideoDownloader.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:YoutubePlaylistDownloader"
-             StartupUri="/Forms/Skeleton.xaml">
+             xmlns:local="clr-namespace:LaMuccaRossaVideoDownloader"
+             StartupUri="Skeleton.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
