--- a/LaMuccaRossaVideoDownloader/Languages/English.xaml
+++ b/LaMuccaRossaVideoDownloader/Languages/English.xaml
@@ -22,7 +22,9 @@
     <s:String x:Key="Name">Name: </s:String>
     <s:String x:Key="Description">Description: </s:String>
     <s:String x:Key="Views">Views: </s:String>
-    <s:String x:Key="SaveDirectory">Save videos to:</s:String>
+    <s:String x:Key="SaveDirectory">Save videos to:
+        (If you save on C: you must start the application as Administrator)</s:String>
+    <s:String x:Key="BrowseFolders">Browse Folders</s:String>
     <s:String x:Key="CurrentlyDownloading">Currently downloading: </s:String>
     <s:String x:Key="TotalProgress">Downloaded so far: </s:String>
     <s:String x:Key="AllDone">All Done.</s:String>
