--- a/LaMuccaRossaVideoDownloader/Languages/Español.xaml
+++ b/LaMuccaRossaVideoDownloader/Languages/Español.xaml
@@ -22,7 +22,9 @@
     <s:String x:Key="Name">Nombre: </s:String>
     <s:String x:Key="Description">Descripción: </s:String>
     <s:String x:Key="Views">Vistas: </s:String>
-    <s:String x:Key="SaveDirectory">Guardar videos en: </s:String>
+    <s:String x:Key="SaveDirectory">Guardar videos en:
+        (Si guardas en C: debes iniciar la aplicación como Administrador) </s:String>
+    <s:String x:Key="BrowseFolders">Explorar carpetas</s:String>
     <s:String x:Key="Skipping">El archivo ya existe, omitiendo...</s:String>    
     <s:String x:Key="CurrentlyDownloading">Actualmente descargando: </s:String>
     <s:String x:Key="TotalProgress">Descargados hasta ahora: </s:String>
