--- a/LaMuccaRossaVideoDownloader/DownloadSettingsControl.xaml
+++ b/LaMuccaRossaVideoDownloader/DownloadSettingsControl.xaml
@@ -15,12 +15,12 @@
                 <StackPanel Margin="10,0,0,0" >
                     <StackPanel Orientation="Horizontal">
                         <Label Content="{DynamicResource SaveDirectory}" Margin="5"  />
-                        <TextBox x:Name="SaveDirectoryTextBox" Margin="5" TextChanged="SaveDirectoryTextBox_TextChanged" MouseDoubleClick="TextBox_MouseDoubleClick" HorizontalAlignment="Left" MinWidth="180" />
+                        <TextBox x:Name="SaveDirectoryTextBox" Margin="5" TextChanged="SaveDirectoryTextBox_TextChanged" MouseDoubleClick="TextBox_MouseDoubleClick" HorizontalAlignment="Left" VerticalAlignment="Center" MinWidth="180" />
                         <WrapPanel>
                         <Controls:Tile Grid.Row="4" Grid.Column="2" Width="40" Height="40" Click="Tile_Click" HorizontalAlignment="Left" >
                             <iconPacks:PackIconModern Width="30" Height="20" Kind="FolderOpen" Margin="9" />
                         </Controls:Tile>
-                            <TextBlock Text="{DynamicResource BrowseFolders}" VerticalAlignment="Center" FontSize="24" Margin="2.5,5,7.5,5" />
+                            <Label Content="{DynamicResource BrowseFolders}" VerticalAlignment="Center" />
                         </WrapPanel>
                     </StackPanel>
                     <CheckBox x:Name="UniquePlaylistDirectoryCheckBox" Content="{DynamicResource SavePlaylistInUniqueDirectory}" Margin="5" />
