Prepare for release 1.925

--- a/LaMuccaRossaVideoDownloader/App.xaml
+++ b/LaMuccaRossaVideoDownloader/App.xaml
@@ -11,7 +11,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
                 <ResourceDictionary Source="/Resources/Styles.xaml"/>
                 <ResourceDictionary Source="/Languages/LanguagesList.xaml"/>
-                <ResourceDictionary Source="/Languages/English.xaml" />
+                <ResourceDictionary Source="/Languages/Italiano.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
